--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,19 @@
 </head>
 
 <body>
-    <article class="ly-wrap">
-        <header class="ly-header">
-            <h1></h1>
-        </header>
-        <article></article>
-    </article>
+    <div class="ly-wrap">
+        @@include('./src/_includes/nav.md')
+
+        <div class="ly-content">
+            <h2 class="main-title">Guide About</h2>
+
+            <div class="about-wrap">
+                <p class="txt-p">해당 사이트는 es6 기반으로 만든 개인 가이드 사이트입니다.</p>
+                <p class="txt-p">해당 사이트에 쓰인 컴포넌트들은 모던 웹 브라우저만을 타깃으로 합니다.</p>
+                <p class="txt-p">es5기준으로 한 가이드 사이트는 <a href="https://sonky740.github.io/Guide/dist/html/" target="_blank" class="link_text">여기</a>에서 볼 수 있습니다.</p>
+            </div>
+        </div>
+    </div>
 
     <script src="./resources/js/ui.js"></script>
 </body>
