--- a/src/html/modal.html
+++ b/src/html/modal.html
@@ -67,9 +67,9 @@
 
     <script src="../resources/js/ui.js"></script>
     <script>
-        const modalEl = document.querySelector('#modal3');
-        const modal = new SKY.Modal(modalEl);
-        modal.show();
+        // const modalEl = document.querySelector('#modal3');
+        // const modal = new SKY.Modal(modalEl);
+        // modal.show();
 
         document.querySelectorAll('[data-modal]').forEach(function (el) {
             el.addEventListener('modal.showing', function () {
