--- a/src/html/tab.html
+++ b/src/html/tab.html
@@ -15,10 +15,22 @@
 
         <div class="ly-content">
             <nav class="guide-nav">
-
+                <div class="guide-nav-content">
+                    <h2 class="guide-nav-title">Tab</h2>
+                </div>
             </nav>
             <div class="guide-content">
                 <section class="guide-section">
+                    <header>
+                        <div>
+                            <h3 class="guide-section-title">Tab</h3>
+                            <p class="sub">[data-tab]</p>
+                        </div>
+                        <p class="description">
+                            기본 탭
+                        </p>
+                    </header>
+
                     <ul class="nav-tab" data-tab="group1">
                         <li class="nav-tab-item on" data-tab-item><button type="button" data-tab-trigger="tab1">Tab1</button></li>
                         <li class="nav-tab-item" data-tab-item><button type="button" data-tab-trigger="tab2">Tab2</button></li>
@@ -30,10 +42,10 @@
                         <div id="tab1" data-tab-target="group1">
                             tab1
                             <ul class="nav-tab" data-tab="group1_2">
-                                <li class="nav-tab-item on" data-tab-item><button type="button" data-tab-trigger="tab1_1">Tab1_1</button></li>
-                                <li class="nav-tab-item" data-tab-item><button type="button" data-tab-trigger="tab1_2">Tab1_2</button></li>
-                                <li class="nav-tab-item" data-tab-item><button type="button" data-tab-trigger="tab1_3">Tab1_3</button></li>
-                                <li class="nav-tab-item" data-tab-item><button type="button" data-tab-trigger="tab1_4">Tab1_4</button></li>
+                                <li class="nav-tab-item on" data-tab-item><button type="button" data-tab-trigger="tab1_1">Tab in Tab1_1</button></li>
+                                <li class="nav-tab-item" data-tab-item><button type="button" data-tab-trigger="tab1_2">Tab in Tab1_2</button></li>
+                                <li class="nav-tab-item" data-tab-item><button type="button" data-tab-trigger="tab1_3">Tab in Tab1_3</button></li>
+                                <li class="nav-tab-item" data-tab-item><button type="button" data-tab-trigger="tab1_4">Tab in Tab1_4</button></li>
                             </ul>
     
                             <div id="tab1_1" data-tab-target="group1_2">
