가이드 스타일 변경

--- a/src/html/modal.html
+++ b/src/html/modal.html
@@ -22,14 +22,11 @@
             <div class="guide-content">
                 <section class="guide-section">
                     <header>
-                        <div>
-                            <h3 class="guide-section-title">Full Modal</h3>
-                            <p class="sub">.ly-modal.full[data-modal]</p>
-                        </div>
-                        <p class="description">
-                            높이 값 100% 모달
-                        </p>
+                        <h3 class="guide-section-title">Full Modal</h3>
+                        <p class="sub">.ly-modal.full[data-modal]</p>
                     </header>
+
+                    <p class="guide-text">높이값 100% 모달</p>
 
                     <button type="button" data-modal-trigger="modal1">모달 호출(button)</button>
                     <br>
@@ -38,14 +35,11 @@
 
                 <section class="guide-section">
                     <header>
-                        <div>
-                            <h3 class="guide-section-title">Center Modal</h3>
-                            <p class="sub">.ly-modal[data-modal]</p>
-                        </div>
-                        <p class="description">
-                            중앙 정렬 모달
-                        </p>
+                        <h3 class="guide-section-title">Center Modal</h3>
+                        <p class="sub">.ly-modal[data-modal]</p>
                     </header>
+
+                    <p class="guide-text">중앙 정렬 모달</p>
                     
                     <button type="button" data-modal-trigger="modal2">모달 호출(button)</button>
                     <br>
@@ -54,14 +48,11 @@
 
                 <section class="guide-section">
                     <header>
-                        <div>
-                            <h3 class="guide-section-title">Bottom Modal</h3>
-                            <p class="sub">.ly-modal.btm[data-modal]</p>
-                        </div>
-                        <p class="description">
-                            Bottom 모달
-                        </p>
+                        <h3 class="guide-section-title">Bottom Modal</h3>
+                        <p class="sub">.ly-modal.btm[data-modal]</p>
                     </header>
+
+                    <p class="guide-text">bottom 모달</p>
                     
                     <button type="button" data-modal-trigger="modal3">모달 호출(button)</button>
                     <br>
