--- a/src/html/accordion.html
+++ b/src/html/accordion.html
@@ -22,14 +22,11 @@
             <div class="guide-content">
                 <section class="guide-section">
                     <header>
-                        <div>
-                            <h3 class="guide-section-title">Accordion</h3>
-                            <p class="sub">[data-accr]</p>
-                        </div>
-                        <p class="description">
-                            기본 아코디언
-                        </p>
+                        <h3 class="guide-section-title">Accordion</h3>
+                        <p class="sub">[data-accr]</p>
                     </header>
+
+                    <p class="guide-text">기본 아코디언</p>
 
                     <button id="showAll" type="button" class="guide-btn">전체 열기</button>
                     <button id="hideAll" type="button" class="guide-btn">전체 닫기</button>
@@ -87,14 +84,12 @@
 
                 <section class="guide-section">
                     <header>
-                        <div>
-                            <h3 class="guide-section-title">Accordion Only</h3>
-                            <p class="sub">[data-accr="only"]</p>
-                        </div>
-                        <p class="description">
-                            하나만 열리는 아코디언
-                        </p>
+                        <h3 class="guide-section-title">Accordion Only</h3>
+                        <p class="sub">[data-accr="only"]</p>
                     </header>
+
+                    <p class="guide-text">하나만 열리는 아코디언</p>
+
                     <button id="show1" type="button" class="guide-btn">첫번째 열기</button>
                     <button id="show2" type="button" class="guide-btn">특정 아코디언</button>
                     <ul id="accordion2" class="accordion" data-accr="only">
@@ -199,14 +194,11 @@
 
                 <section class="guide-section">
                     <header>
-                        <div>
-                            <h3 class="guide-section-title">Accordion Animation False</h3>
-                            <p class="sub">[data-accr][data-accr-animation="false"]</p>
-                        </div>
-                        <p class="description">
-                            트랜지션 효과 없는 아코디언
-                        </p>
+                        <h3 class="guide-section-title">Accordion Animation False</h3>
+                        <p class="sub">[data-accr][data-accr-animation="false"]</p>
                     </header>
+
+                    <p class="guide-text">트랜지션 효과 없는 아코디언</p>
 
                     <ul class="accordion" data-accr="only" data-accr-animation="false">
                         <li class="accordion-item on" data-accr-item>
