events, method 추가

--- a/src/html/sample.html
+++ b/src/html/sample.html
@@ -23,6 +23,7 @@
         </div>
     </div>
 
+    <script src="../resources/js/vendor/prism.js"></script>
     <script src="../resources/js/ui.js"></script>
     <script>
         
