--- a/src/html/accordion.html
+++ b/src/html/accordion.html
@@ -91,7 +91,7 @@
                     <p class="guide-text">하나만 열리는 아코디언</p>
 
                     <button id="show1" type="button" class="guide-btn">첫번째 열기</button>
-                    <button id="show2" type="button" class="guide-btn">특정 아코디언</button>
+                    <button id="show2" type="button" class="guide-btn">특정 아코디언 열기</button>
                     <ul id="accordion2" class="accordion" data-accr="only">
                         <li id="accordion2_1" class="accordion-item on" data-accr-item>
                             <div class="accordion-title">
@@ -250,10 +250,66 @@
                         </li>
                     </ul>
                 </section>
+
+                <section class="guide-section">
+                    <header>
+                        <h3 class="guide-section-title">Events</h3>
+                    </header>
+
+                    <p class="guide-text">시점에 따른 이벤트 기능</p>
+                    <pre><code class="language-js">document.querySelectorAll('[data-accr-item]').forEach(function (el) {
+    // 열릴 때
+    el.addEventListener('modal.showing', function () {
+        console.log(this, 'showing');
+    })
+    // 열린 후
+    el.addEventListener('modal.shown', function () {
+        console.log(this, 'shown');
+    })
+    // 닫힐 때
+    el.addEventListener('modal.hiding', function () {
+        console.log(this, 'hiding');
+    })
+    // 닫힌 후
+    el.addEventListener('modal.hidden', function () {
+        console.log(this, 'hidden');
+    })
+})</code></pre>
+                </section>
+
+                <section class="guide-section">
+                    <header>
+                        <h3 class="guide-section-title">Method</h3>
+                    </header>
+
+                    <p class="guide-text">Component 호출</p>
+                    <pre><code class="language-js">const accrEl = document.querySelector('#accordion1');
+const accr = new SKY.Accordion(accrEl);
+</code></pre>
+
+                    <p class="guide-text">전체 열기 ([data-accr="only"]에선 안됩니다.)</p>
+                    <pre><code class="language-js">accr.showAll();</code></pre>
+
+                    <p class="guide-text">전체 닫기</p>
+                    <pre><code class="language-js">accr.showAll();</code></pre>
+
+                    <p class="guide-text">첫번째 아코디언 열기</p>
+                    <pre><code class="language-js">accr.show(0);</code></pre>
+
+                    <p class="guide-text">첫번째 아코디언 닫기</p>
+                    <pre><code class="language-js">accr.hide(0);</code></pre>
+
+                    <p class="guide-text">특정 아코디언 열기</p>
+                    <pre><code class="language-js">accr.show(document.querySelector('#accordion2_3'));</code></pre>
+
+                    <p class="guide-text">특정 아코디언 닫기</p>
+                    <pre><code class="language-js">accr.show(document.querySelector('#accordion2_3'));</code></pre>
+                </section>
             </div>
         </div>
     </div>
 
+    <script src="../resources/js/vendor/prism.js"></script>
     <script src="../resources/js/ui.js"></script>
     <script>
         document.querySelectorAll('[data-accr-item]').forEach(function (el) {
