--- a/src/html/tab.html
+++ b/src/html/tab.html
@@ -37,7 +37,7 @@
 
                     <div id="tab1" data-tab-target="group1">
                         tab1
-                        <div class="nav-tab" data-tab="group1_2" data-tab-animation="false">
+                        <div class="nav-tab" data-tab="group1_2">
                             <button type="button" class="on" data-tab-trigger="#tab1_1">Tab in Tab1_1</button>
                             <button type="button" data-tab-trigger="#tab1_2">Tab in Tab1_2</button>
                             <button type="button" data-tab-trigger="#tab1_3">Tab in Tab1_3</button>
@@ -65,6 +65,35 @@
                     </div>
                     <div id="tab4" data-tab-target="group1">
                         tab4
+                    </div>
+                </section>
+
+                <section class="guide-section">
+                    <header>
+                        <h3 class="guide-section-title">No Animation Tab</h3>
+                        <p class="sub">[data-tab][data-animation="false"]</p>
+                    </header>
+
+                    <p class="guide-text">애니메이션 효과 없는 탭</p>
+
+                    <div class="nav-tab" data-tab="group2" data-animation="false">
+                        <button type="button" class="on" data-tab-trigger="#tab5">Tab5</button>
+                        <button type="button" data-tab-trigger="#tab6">Tab6</button>
+                        <button type="button" data-tab-trigger="#tab7">Tab7</button>
+                        <button type="button" data-tab-trigger="#tab8">Tab8</button>
+                    </div>
+
+                    <div id="tab5" data-tab-target="group2">
+                        tab5
+                    </div>
+                    <div id="tab6" data-tab-target="group2">
+                        tab6
+                    </div>
+                    <div id="tab7" data-tab-target="group2">
+                        tab7
+                    </div>
+                    <div id="tab8" data-tab-target="group2">
+                        tab8
                     </div>
                 </section>
 
